fix : bodyTableRow__style__td overflow issue solve

--- a/src/style/body.less
+++ b/src/style/body.less
@@ -27,6 +27,13 @@
 .ac-datagrid--body--main__panel__input {
   margin: 0;
   border: none;
+  font-size: 1rem;
+  font-weight: bold;
+  overflow: hidden;
+}
+
+.ac-datagrid--body--main__panel__cell {
+  overflow: hidden;
 }
 [data-panel="scroll-content"] {
   position: relative;
